# openbsw

./: CMakeLists.txt  CMakePresets.json
.github/workflows/: build.yml
cmake/toolchains/: ArmNoneEabi.cmake
doc/dev/: index.rst  s32k344_integration_plan.md
doc/dev/modules/: s32k3xx.rst
test/pyTest/: target_s32k344.toml
